samples/_failures_safe/1761722667_e712bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d110ac7d.c: In function ‘main’:
./samples/SAFE/__tmp_d110ac7d.c:178:5: error: expected ‘,’ or ‘;’ at end of input
  178 |     for (size_t i = 0
      |     ^~~
./samples/SAFE/__tmp_d110ac7d.c:178:5: error: expected declaration or statement at end of input
